# biospec

./: README.md  THIRD_PARTY_LICENSES.md  optional-agent-instructions.md  pyproject.toml
.biospec/: analysis_overview.md  dataset_overview.md  datasets.md  intent.md  intent_overview.md  project_overview.md  project_resources.md  relationships.md  status.md
.biospec/subtemplates/: analysis.md  dataset.md  intent.md
.github/: copilot-instructions.md
.github/agents/: BioSpec.agent.md
.github/prompts/: biospec.autofill.prompt.md  biospec.create_project.prompt.md  biospec.discuss.prompt.md  biospec.edit.prompt.md  biospec.experimental.filter.prompt.md  biospec.links.prompt.md  biospec.parse_existing_project.prompt.md  biospec.review.prompt.md  biospec.review_intent.prompt.md  biospec.setup.prompt.md  biospec.status.prompt.md  biospec.validate_fields.prompt.md
scripts/: build-release.sh
scripts/bash/: create-instance.sh  setup-project.sh  validate-templates.sh
scripts/powershell/: create-instance.ps1  setup-project.ps1  validate-templates.ps1
src/biospec_cli/: __init__.py  __main__.py
